@@ -1,3 +1,9 @@
+2003-02-10  Jim Ingham <jingham@apple.com>
+
+	* macosx/tkMacOSXCursor.c (TkMacOSXInstallCursor): Set all theme
+	cursors using SetThemeCursor or SetAnimatedThemeCursors.
+	(TkGetCursorByName): Use the theme cursors for arrow, ibeam, etc.
+
 2003-02-05  Fred Fish  <fnf@intrinsity.com>
 
 	* macosx/tkMacOSXWm.c (Tk_SetGrid): Fix precedence problem with
